--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,16 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-// Variables
-@import 'variables';
+.avatar-image {
+    vertical-align: middle;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+}
 
 // Bootstrap
+$theme-colors: (
+    "background": #F8F8F8,
+    "navbar": #FFFFFF,
+    "panel": #FFFFFF,
+    "detail": #6D48E5
+);
+
 @import '~bootstrap/scss/bootstrap';
