--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,24 @@
   border-radius: 50%;
 }
 
+.button-without-style {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0 !important;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+.no-dropdown-caret::after {
+  content: none !important;
+  border-top: 0 !important;
+  border-right: 0 !important;
+  border-bottom: 0 !important;
+  border-left: 0 !important;
+}
+
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
